--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@ img{
 
 <! link 1>
 <a class="chooser" href="http://bit-hut.com/Bit-Hut/notLoggedIn/all.php?id=10">
-	<p style="transform: translate(0%, 33.33333333333%);">Bit-Hut.com</p>
+	<p style="transform: translate(0%, 33.33333333333%);">Bit-Hut's Bit-Hut profile</p>
+</a>
+
+<! link 2>
+<a class="chooser" href="http://bit-hut.com/Bit-Hut/notLoggedIn/all.php?id=3">
+	<p style="transform: translate(0%, 33.33333333333%);">Zeke's Bit-Hut profile</p>
 </a>
 
 <div style="position: fixed; bottom: 0px; width: 100%; display: flex; text-align: center; margin: auto;">
